I've change Test namespace on App Added my login function

--- a/phpspec.yml
+++ b/phpspec.yml
@@ -1,5 +1,5 @@
 suites:
     main:
-        namespace: Test
-        psr4_prefix: Test
+        namespace: App
+        psr4_prefix: App
         src_path: app
