--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
 	"name": "laravel/laravel",
+	"fzaninotto/faker" : "dev-master",
 	"description": "The Laravel Framework.",
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
@@ -9,7 +10,8 @@
 		"laravel/socialite": "~2.0",
 		"illuminate/html": "~5.0",
 		"way/generators": "~3.0",
-		"phpspec/phpspec": "~2.0"
+		"phpspec/phpspec": "~2.0",
+		"fzaninotto/faker": "^1.5"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
